fix some font sizing and spacing

--- a/src/static/src/styles/component-button.scss
+++ b/src/static/src/styles/component-button.scss
@@ -16,7 +16,6 @@
   border-radius: $border-radius;
   background-color: $color-primary;
 
-  font-size: 1.0625rem;
   font-weight: 600;
 
   appearance: none;
