--- a/src/static/src/styles/component-table.scss
+++ b/src/static/src/styles/component-table.scss
@@ -54,7 +54,7 @@ th {
 .table-condensed td {
   padding: 0.25rem;
 
-  font-size: 0.875rem;
+  font-size: $font-size-sm;
 }
 
 .table-fixed {
