--- a/src/static/src/styles/page-user-index.scss
+++ b/src/static/src/styles/page-user-index.scss
@@ -10,7 +10,7 @@
 .page-user-index-next-game-info-date {
   margin-bottom: 0.25rem;
 
-  font-size: 1.25rem;
+  font-size: $font-size-lg;
 }
 
 
